cabal-version:      3.0
name:               json-parser
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Alexander Johnston
maintainer:         Aliics@hotmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
      Data.Json,
      Data.Json.Errors,
      Data.Json.Types,
      Data.Json.Types.Json,
      Data.Json.Types.JsonValue,
      Data.Json.Internal.Parser
    -- other-modules:
    -- other-extensions:
    build-depends:    
      base ^>=4.17.2.1,
      parsec
    hs-source-dirs:   src
    default-language: GHC2021

test-suite json-parser-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        json-parser
